--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="C:\Users\Shivam\Downloads\shopping site\Images\download-removebg-preview.png" width = "125px">
+                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\cart logo.png" width = "125px">
             </div>
             <nav>
                 <ul>
@@ -30,7 +30,7 @@
                     <li><a href="">Account</a></li>
                 </ul>
             </nav>
-            <img src="C:\Users\Shivam\Downloads\shopping site\Images\44fbb5335d569871a4f853c906ebc599-removebg-preview.png" width="30px" height = "30px" >
+            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\shopping bag logo.png" width="30px" height = "30px" >
         </div>
         <div class="row">
             <div class="col-2">
@@ -39,7 +39,7 @@
                 <a href=""class="btn">Shop now! &#9755;</a>
             </div>
             <div class="col-2">
-               <img src="C:\Users\Shivam\Downloads\shopping site\Images\istockphoto-1165734034-170667a-removebg-preview.png" alt="">
+               <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\shopping logo.png" alt="">
             </div>
         </div>
     </div>
@@ -49,19 +49,19 @@
     <div class="small-container">
         <div class="row">
             <div class="col-3">
-                <img src="C:\Users\Shivam\Downloads\shopping site\Images\He561fe9bf9284396ba5c2b0b534b9a62I.jpg">
+                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\casual collection.jpg">
                 <h1>Casual collection</h1>
             </div>
             <div class="col-3">
-                <img src="C:\Users\Shivam\Downloads\shopping site\Images\MP000000010715815_658Wx734H_202109250742091.jpeg">
+                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\footwear.jpeg">
                 <h1>Foot-wear collection</h1>
             </div>
             <div class="col-3">
-                <img src="C:\Users\Shivam\Downloads\shopping site\Images\unnamed.jpg">
+                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\shirts for men.jpg">
                 <h1>Shirts for Men</h1>
             </div>
             <div class="col-3">
-                <img src="C:\Users\Shivam\Downloads\shopping site\Images\cca319259f94bef4a270f5bc6fb9510d.jpg">
+                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\formals men.jpg">
                 <h1>Formals Men</h1>
             </div>
             
@@ -75,25 +75,25 @@
     <h2 class ="title">Featured Prdoucts </h2>
     <div class="row">
         <div class="col-4">
-            <img src="C:\Users\Shivam\Downloads\shopping site\Images\photo-1617137968427-85924c800a22.jpg">
+            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\men formals.jpg">
             <h4>Men Formals</h4>
             <p> Rs.12,599 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\Downloads\shopping site\Images\Ermenegildo-Zegna.jpg">
+            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\royal men black suit.jpg">
             <h4>Royal Men Black Suit</h4>
             <p> Rs.10,950 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\Downloads\shopping site\Images\Privathinker-Brand-Casual-Harem-Pants-Men-Jogger-Pants-Men-Fitness-Trousers-Male-Chinese-Traditional-Harajuku-2018__62423.jpg">
+            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\casual free size trouser.jpg">
             <h4>Casual free Size Trouser</h4>
             <p> Rs.8,970 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\Downloads\shopping site\Images\54fd3bf9a014d37f7f7c8af7d6f8d82f.jpg">
+            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\loafer men.jpg">
             <h4>Loafer Men</h4>
             <p> Rs.5,890 /- </p>
         </div>
@@ -108,49 +108,49 @@
       <h2 class ="title">New collection </h2>
       <div class="row">
         <div class="col-4">
-            <img src="C:\Users\Shivam\Downloads\shopping site\Images\download (1).jpg">
+            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\loafer.jpg">
             <h4>Loafer Men</h4>
             <p> Rs.1,799 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\Downloads\shopping site\Images\0204-menspantedit-product-02.jpg">
+            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\cpunk black trouser.jpg">
             <h4>Cpunk Black Trouser</h4>
             <p> Rs.4,950 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\Downloads\shopping site\Images\7063aa0b8041372c31b8b3b8aedfb0af.jpg">
+            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\royal men tuxido limited collection.jpg">
             <h4>Royal Men Tuxido<br>Limited Collection</h4>
             <p> Rs.18,970 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\Downloads\shopping site\Images\40627-106699-large.jpg">
+            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\formal shirts collection.jpg">
             <h4>Formal Shirts collection</h4>
             <p> Rs.3,450 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\Downloads\shopping site\Images\b0e1075919043dbc1d44e25b6975d551.jpg">
+            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\royal men trousers.jpg">
             <h4>Royal Men Trousers</h4>
             <p> Rs.8,799 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\Downloads\shopping site\Images\Man-in-chino-pants.jpg">
+            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\men trousers new edition.jpg">
             <h4>Men Trousers New Edition</h4>
             <p> Rs.4,950 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\Downloads\shopping site\Images\Wedding-Mens-Formal-Wear-2.jpg">
+            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\royal men tuxido limited collection.jpg">
             <h4>Royal Men Tuxido<br>Limited Collection</h4>
             <p> Rs.16,980 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\Downloads\shopping site\Images\28-284865_best-free-headphones-liverpool-fc-bluetooth-headphones-hd-removebg-preview.png">
+            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\electronics and more.png">
             <h4>Electronics & more</h4>
             <p>Starting from Rs. 1,999 /- <br>Offer Ends soon</p>
         </div>
@@ -163,7 +163,7 @@
     <div class="small-container">
         <div class="row">
             <div class="col-2">
-                <img src="C:\Users\Shivam\Downloads\shopping site\Images\4c176ce6050c6fdf3fa4a6fbc0265e34.jpg" >
+                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\exclusive wedding collection.jpg" >
             </div>
             <div class="col-2">
                 <h1>Exclusive Wedding Collection</h1>
@@ -186,7 +186,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                 </div>
-                <img src="C:\Users\Shivam\Downloads\shopping site\Images\download (2).jpg">
+                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\sam peterlik.jpg">
                 <h3>Sam peterlik</h3>
             </div>
             <div class="col-3">
@@ -198,7 +198,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                 </div>
-                <img src="C:\Users\Shivam\Downloads\shopping site\Images\images (2).jpg">
+                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\thomas stieve.jpg">
                 <h3>Thomas Stieve</h3>
             </div>
             <div class="col-3">
@@ -210,7 +210,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                 </div>
-                <img src="C:\Users\Shivam\Downloads\shopping site\Images\images (3).jpg">
+                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\suraj tim.jpg">
                 <h3>Suraj Tim</h3>
             </div>
         </div>
@@ -222,22 +222,22 @@
     <div class="small-container">
         <div class="row">
             <div class="col-5">
-                <img src="C:\Users\Shivam\Downloads\shopping site\Images\download__1_-removebg-preview.png">
+                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\monte carlo logo.png">
             </div>
             <div class="col-5">
-                <img src="C:\Users\Shivam\Downloads\shopping site\Images\download-removebg-preview (2).png">
+                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\pepsi logo.png">
             </div>
             <div class="col-5">
-                <img src="C:\Users\Shivam\Downloads\shopping site\Images\rolex-min-removebg-preview.png">
+                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\puma logo.png">
             </div>
             <div class="col-5">
-                <img src="C:\Users\Shivam\Downloads\shopping site\Images\royal-logo-concept-design-with-crown-shape_1017-33265-removebg-preview.png">
+                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\rolex logo.png">
             </div>
             <div class="col-5">
-                <img src="C:\Users\Shivam\Downloads\shopping site\Images\1621459045707-removebg-preview.png">
+                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\royal crown.png">
             </div>
             <div class="col-5">
-                <img src="C:\Users\Shivam\Downloads\shopping site\Images\adidas_logo_hd_wallapper_by_abrilss_d811gf7-fullview-removebg-preview.png">
+                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\addidas logo.png">
             </div>
         </div>
     </div>
@@ -251,8 +251,8 @@
                 <h3>Download App</h3>
                 <p>Downlaod ios & android</p>
                 <div class="applogo">
-                    <img src="C:\Users\Shivam\Downloads\shopping site\Images\playstore-removebg-preview.png">
-                    <img src="C:\Users\Shivam\Downloads\shopping site\Images\applestore-removebg-preview.png">
+                    <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\playstore-removebg-preview.png">
+                    <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\applestore.png">
                 </div>
             </div>
             </div>
