--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\cart logo.png" width = "125px">
+                <img src="./Images/cart_logo.png" width = "125px">
             </div>
             <nav>
                 <ul>
@@ -30,7 +30,7 @@
                     <li><a href="">Account</a></li>
                 </ul>
             </nav>
-            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\shopping bag logo.png" width="30px" height = "30px" >
+            <img src="./Images/shopping_bag_logo.png" width="30px" height = "30px" >
         </div>
         <div class="row">
             <div class="col-2">
@@ -39,7 +39,7 @@
                 <a href=""class="btn">Shop now! &#9755;</a>
             </div>
             <div class="col-2">
-               <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\shopping logo.png" alt="">
+               <img src="./Images/shopping_logo.png" alt="">
             </div>
         </div>
     </div>
@@ -49,19 +49,19 @@
     <div class="small-container">
         <div class="row">
             <div class="col-3">
-                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\casual collection.jpg">
+                <img src="./Images/casual_collection.jpg">
                 <h1>Casual collection</h1>
             </div>
             <div class="col-3">
-                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\footwear.jpeg">
+                <img src="./Images/footwear.jpeg">
                 <h1>Foot-wear collection</h1>
             </div>
             <div class="col-3">
-                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\shirts for men.jpg">
+                <img src="./Images/shirts_for_men.jpg">
                 <h1>Shirts for Men</h1>
             </div>
             <div class="col-3">
-                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\formals men.jpg">
+                <img src="./Images/formals_men.jpg">
                 <h1>Formals Men</h1>
             </div>
             
@@ -75,25 +75,25 @@
     <h2 class ="title">Featured Prdoucts </h2>
     <div class="row">
         <div class="col-4">
-            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\men formals.jpg">
+            <img src="./Images/men_formals.jpg">
             <h4>Men Formals</h4>
             <p> Rs.12,599 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\royal men black suit.jpg">
+            <img src="./Images/royal_men_black_suit.jpg">
             <h4>Royal Men Black Suit</h4>
             <p> Rs.10,950 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\casual free size trouser.jpg">
+            <img src="./Images/casual_free_size_trouser.jpg">
             <h4>Casual free Size Trouser</h4>
             <p> Rs.8,970 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\loafer men.jpg">
+            <img src="./Images/loafer_men.jpg">
             <h4>Loafer Men</h4>
             <p> Rs.5,890 /- </p>
         </div>
@@ -108,49 +108,49 @@
       <h2 class ="title">New collection </h2>
       <div class="row">
         <div class="col-4">
-            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\loafer.jpg">
+            <img src="./Images/loafer.jpg">
             <h4>Loafer Men</h4>
             <p> Rs.1,799 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\cpunk black trouser.jpg">
+            <img src="./Images/cpunk_black_trouser.jpg">
             <h4>Cpunk Black Trouser</h4>
             <p> Rs.4,950 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\royal men tuxido limited collection.jpg">
+            <img src="./Images/13e0a5f5046e6225b01c6071f3de882e.jpg">
             <h4>Royal Men Tuxido<br>Limited Collection</h4>
             <p> Rs.18,970 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\formal shirts collection.jpg">
+            <img src="./Images/formal_shirts_collection.jpg">
             <h4>Formal Shirts collection</h4>
             <p> Rs.3,450 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\royal men trousers.jpg">
+            <img src="./Images/royal_men_trousers.jpg">
             <h4>Royal Men Trousers</h4>
             <p> Rs.8,799 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\men trousers new edition.jpg">
+            <img src="./Images/men_trousers_new_edition.jpg">
             <h4>Men Trousers New Edition</h4>
             <p> Rs.4,950 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\royal men tuxido limited collection.jpg">
+            <img src="./Images/Royal_wedding_suit.jpg">
             <h4>Royal Men Tuxido<br>Limited Collection</h4>
             <p> Rs.16,980 /- </p>
         </div>
 
         <div class="col-4">
-            <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\electronics and more.png">
+            <img src="./Images/electronics_and_more.png">
             <h4>Electronics & more</h4>
             <p>Starting from Rs. 1,999 /- <br>Offer Ends soon</p>
         </div>
@@ -163,7 +163,7 @@
     <div class="small-container">
         <div class="row">
             <div class="col-2">
-                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\exclusive wedding collection.jpg" >
+                <img src="./Images/exclusive_wedding_collection.jpg" >
             </div>
             <div class="col-2">
                 <h1>Exclusive Wedding Collection</h1>
@@ -186,7 +186,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                 </div>
-                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\sam peterlik.jpg">
+                <img src="./Images/sam_peterlik.jpg">
                 <h3>Sam peterlik</h3>
             </div>
             <div class="col-3">
@@ -198,7 +198,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                 </div>
-                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\thomas stieve.jpg">
+                <img src="./Images/thomas_stieve.jpg">
                 <h3>Thomas Stieve</h3>
             </div>
             <div class="col-3">
@@ -210,7 +210,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                 </div>
-                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\suraj tim.jpg">
+                <img src="./Images/suraj_tim.jpg">
                 <h3>Suraj Tim</h3>
             </div>
         </div>
@@ -222,22 +222,22 @@
     <div class="small-container">
         <div class="row">
             <div class="col-5">
-                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\monte carlo logo.png">
+                <img src="./Images/pepsi_logo.png">
             </div>
             <div class="col-5">
-                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\pepsi logo.png">
+                <img src="./Images/addidas_logo.png">
             </div>
             <div class="col-5">
-                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\puma logo.png">
+                <img src ="Images/monte_carlo_logo.png">
             </div>
             <div class="col-5">
-                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\rolex logo.png">
+                <img src="./Images/rolex_logo.png">
             </div>
             <div class="col-5">
-                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\royal crown.png">
+                <img src="./Images/royal_crown.png">
             </div>
             <div class="col-5">
-                <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\addidas logo.png">
+                <img src="./Images/puma_logo.png">
             </div>
         </div>
     </div>
@@ -251,8 +251,8 @@
                 <h3>Download App</h3>
                 <p>Downlaod ios & android</p>
                 <div class="applogo">
-                    <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\playstore-removebg-preview.png">
-                    <img src="C:\Users\Shivam\OneDrive\Documents\Github\Images\applestore.png">
+                    <img src="./Images/playstore.png">
+                    <img src="./Images/applestore.png">
                 </div>
             </div>
             </div>
@@ -277,7 +277,7 @@
             
         </div>
         <hr>
-        <p class="Copyright">Copyright 2022 - Easy Shopping</p>
+        <p class="Copyright">Copyright 2022 - Easy Shopping created by @Shivam <br>contact - singh9456092@gmail.com</p>
     </div>
  </div>
 
