--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <div class="navbar">
             <div class="logo">
                 <img src="./Images/cart_logo.png" width = "125px">
+                <h2>Apna Store</h2>
+                <p>A free shopping store 😎<br> with amazing deals and offers this season<br>So what are you waiting for !!<br> Make Surprizes amazing😁</p>
             </div>
             <nav>
                 <ul>
