--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.2/css/fontawesome.min.css">
 
 </head>
+<link rel="icon" href="./Images/icon2.png" width="180px" height = "80px" >   
 <body>
     <div class="header">
     
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="./Images/cart_logo.png" width = "125px">
+                <img src="./Images/cart_logo.png" width = "80px">
                 <h2>Apna Store</h2>
                 <p>A free shopping store 😎<br> with amazing deals and offers this season<br>So what are you waiting for !!<br> Make Surprizes amazing😁</p>
             </div>
@@ -32,7 +33,7 @@
                     <li><a href="">Account</a></li>
                 </ul>
             </nav>
-            <img src="./Images/shopping_bag_logo.png" width="30px" height = "30px" >
+            <img src="./Images/icon2.png" width="80px" height = "80px" >
         </div>
         <div class="row">
             <div class="col-2">
